# ParadePlanner

./: .gitignore  pyproject.toml
.github/hooks/: pre-commit
.github/workflows/: ruff.yaml
src/django_project/: startup.sh
src/django_project/core/: asgi.py  settings.py  views.py  wsgi.py
src/django_project/core/static/paradeplanner/css/: main.css  main.css.map  main.scss  sortable.css
src/django_project/core/static/paradeplanner/js/: sortable copy.js  sortable.js
src/django_project/core/templates/: base.htm
src/django_project/core/templates/core/partials/: footer.htm  navbar.htm  sidebar.htm
src/django_project/core/templates/core/partials/sidebar_submenus/: admin.htm
src/django_project/core/urls/: rest.py  urls.py
src/django_project/parademgr/: admin.py  apps.py  fields.py  filtersets.py  forms.py  models.py  serializers.py  signals.py
src/django_project/parademgr/data/: allexport.csv  allexport.xlsx  lineup.csv  paradeExport.csv  sendall.xlsx
src/django_project/parademgr/forms/: create.py  filter_forms.py
src/django_project/parademgr/migrations/: 0001_initial.py  0002_alter_category_options_alter_division_options_and_more.py  0002_alter_category_options_alter_organization_options_and_more.py
src/django_project/parademgr/scripts/: generate_dev_data.py
src/django_project/parademgr/templates/parademgr/full/custom/: admin.html  test copy.html  test.html  test1.html
src/django_project/parademgr/templates/parademgr/full/detail/: organization.html  parade.html
src/django_project/parademgr/templates/parademgr/full/list/: award_types.html  awards.html  categories.html  divisions.html  organizations.html  parades.html
src/django_project/parademgr/templates/parademgr/navigation/: report.htm
src/django_project/parademgr/templates/parademgr/navigation/sidebar/: data.htm
src/django_project/parademgr/templates/parademgr/partial/card/: awards.htm
src/django_project/parademgr/templates/parademgr/partial/component/: admin.htm  content_title.htm
src/django_project/parademgr/templates/parademgr/partial/detail/: organization.htm  (+1 more)
src/django_project/parademgr/templatetags/: query_params.py
src/django_project/parademgr/urls/: __init__.py  gui.py  rest.py
src/django_project/parademgr/views/: gui.py  report.py  rest.py
src/django_project/tests/unit/parademgr/: test_model_crud.py
src/envs/: .env.template  .env.test
(+97 files in other folders)
